feat: implement track endpoint
